fix extra margin

--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -9,3 +9,7 @@
 .skill {
   width: inherit;
 }
+
+.skill h4 {
+  margin-top: 0;
+}
